--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                 <div class="columns is-centered">
                     <div class="column has-text-centered">
                         <h1 class="title is-1 publication-title">
-                            <span style="color: #0bfb42;font-weight: bolder;">GSORB-SLAM</span>: Gaussian Splatting SLAM benefits from ORB features and Transmittance information
+                             <span style="color: #00FFFF;font-weight: bolder;">GS</span><span style="color: #0099FF;font-weight: bolder;">ORB</span><span style="color: #0033FF;font-weight: bolder;">-SLAM</span>: Gaussian Splatting SLAM benefits from ORB features and Transmittance information
                         </h1>
                        
                         <div class="is-size-5 publication-authors">
@@ -262,7 +262,7 @@
                         <img src="./static/images/pipline.png">
                         <p>
                             
-                            In this paper, we propose <span style="color: #0bfb42;font-weight: bolder;">GSORB-SLAM</span>, a dense SLAM framework that integrates 3DGS with ORB features through a tightly coupled optimization pipeline. To mitigate the effects of noise and artifacts, we propose a novel geometric representation and optimization method for tracking, which significantly enhances localization accuracy and robustness. For high-fidelity mapping, we propose an adaptive Gaussian expansion and regularization method that facilitates compact yet expressive scene modeling while suppressing redundant primitives. 
+                            In this paper, we propose  <span style="color: #00FFFF;font-weight: bolder;">GS</span><span style="color: #0099FF;font-weight: bolder;">ORB</span><span style="color: #0033FF;font-weight: bolder;">-SLAM</span>, a dense SLAM framework that integrates 3DGS with ORB features through a tightly coupled optimization pipeline. To mitigate the effects of noise and artifacts, we propose a novel geometric representation and optimization method for tracking, which significantly enhances localization accuracy and robustness. For high-fidelity mapping, we propose an adaptive Gaussian expansion and regularization method that facilitates compact yet expressive scene modeling while suppressing redundant primitives. 
 Furthermore, we design a hybrid graph-based viewpoint selection mechanism that effectively mitigates overfitting and accelerates convergence. Extensive evaluations across various datasets demonstrate that our system achieves state-of-the-art performance in both tracking precision—improving RMSE by 16.2% compared to ORB-SLAM2 baselines—and reconstruction quality—improving PSNR by 3.93 dB compared to 3DGS-SLAM baselines.
                         </p>
                     </div>
