--- a/index.html
+++ b/index.html
@@ -623,31 +623,31 @@ Furthermore, we design a hybrid graph-based viewpoint selection mechanism that e
 
 
     <script>
-        // 初始化BeforeAfter组件
-        new BeforeAfter({
-            id: '#example1'
-        });
-        new BeforeAfter({
-            id: '#example2'
-        });
-        new BeforeAfter({
-            id: '#example3'
-        });
-        new BeforeAfter({
-            id: '#example4'
-        });
-        new BeforeAfter({
-            id: '#example5'
-        });
-        new BeforeAfter({
-            id: '#example6'
-        });
-        new BeforeAfter({
-            id: '#example7'
-        });
-        new BeforeAfter({
-            id: '#example8'
-        });
+        // // 初始化BeforeAfter组件
+        // new BeforeAfter({
+        //     id: '#example1'
+        // });
+        // new BeforeAfter({
+        //     id: '#example2'
+        // });
+        // new BeforeAfter({
+        //     id: '#example3'
+        // });
+        // new BeforeAfter({
+        //     id: '#example4'
+        // });
+        // new BeforeAfter({
+        //     id: '#example5'
+        // });
+        // new BeforeAfter({
+        //     id: '#example6'
+        // });
+        // new BeforeAfter({
+        //     id: '#example7'
+        // });
+        // new BeforeAfter({
+        //     id: '#example8'
+        // });
 
         document.addEventListener('DOMContentLoaded', () => {
   // 1. 找到所有对比视频
@@ -683,6 +683,17 @@ Furthermore, we design a hybrid graph-based viewpoint selection mechanism that e
     });
   });
 });
+    </script>
+
+<script>
+    document.addEventListener('DOMContentLoaded', () => {
+      // …（如前所述的 canplaythrough + Promise.all + play + 同步逻辑）…
+    
+      // 初始化 BeforeAfter 对比组件
+      for (let i = 1; i <= 8; i++) {
+        new BeforeAfter({ id: `#example${i}` });
+      }
+    });
     </script>
 
     <section class="hero is-small is-light">
