--- a/index.html
+++ b/index.html
@@ -802,7 +802,7 @@ Furthermore, we design a hybrid graph-based viewpoint selection mechanism that e
                 <a class="icon-link" href="./static/paper/gsorb-slam_paper.pdf">
                     <i class="fas fa-file-pdf"></i>
                 </a>
-                <a class="icon-link" href="https://github.com/gsorb-slam" class="external-link" disabled>
+                <a class="icon-link" href="https://github.com/Aczheng-cai/GSORB-SLAM" class="external-link" disabled>
                     <i class="fab fa-github"></i>
                 </a>
             </div>
