--- a/index.html
+++ b/index.html
@@ -668,15 +668,14 @@
     <section class="section" id="BibTeX">
         <div class="container is-max-desktop content">
             <h2 class="title">BibTeX</h2>
-            <pre><code>@misc{zheng2024gsorbslamgaussiansplattingslam,
-            title={GSORB-SLAM: Gaussian Splatting SLAM benefits from ORB features and Transmittance information}, 
-            author={Wancai Zheng and Xinyi Yu and Jintao Rong and Linlin Ou and Yan Wei and Libo Zhou},
-            year={2024},
-            eprint={2410.11356},
-            archivePrefix={arXiv},
-            primaryClass={cs.RO},
-            url={https://arxiv.org/abs/2410.11356}, 
-}
+            <pre><code>@ARTICLE{11091447,
+              author={Zheng, Wancai and Yu, Xinyi and Rong, Jintao and Ou, Linlin and Wei, Yan and Zhou, Libo},
+              journal={IEEE Robotics and Automation Letters}, 
+              title={GSORB-SLAM: Gaussian Splatting SLAM benefits from ORB features and Transmittance information}, 
+              year={2025},
+              pages={1-8},
+              doi={10.1109/LRA.2025.3592066}}
+
 }</code></pre>
         </div>
     </section>
