--- a/index.html
+++ b/index.html
@@ -91,11 +91,11 @@
                         <h1 class="title is-1 publication-title">
                              <span style="color: #00FFFF;font-weight: bolder;">GS</span><span style="color: #0099FF;font-weight: bolder;">ORB</span><span style="color: #0033FF;font-weight: bolder;">-SLAM</span>: Gaussian Splatting SLAM benefits from ORB features and Transmittance information
                         </h1>
-                        <!-- <div class="is-size-5 publication-authors">
+                        <div class="is-size-5 publication-authors">
                             <span class="author-block">
                                 <strong>🎉 RAL2025</strong>
                             </span>
-                        </div> -->
+                        </div>
                         <div class="is-size-5 publication-authors">
                             <span class="author-block">
                                 Wancai Zheng</a>,
@@ -120,7 +120,6 @@
 
                         <div class="is-size-5 publication-authors">
                             <span class="author-block">Zhejiang University of Technology</span>
-                            <span class="author-block"><sup>*</sup>denotes equal contribution</span>
                         </div>
                         <!-- TODO: update paper and video link once upload -->
                         <div class="column has-text-centered">
