--- a/index.html
+++ b/index.html
@@ -123,18 +123,18 @@
                         </div>
                         <!-- TODO: update paper and video link once upload -->
                         <div class="column has-text-centered">
-                            <!-- <div class="publication-links"> -->
+                            <div class="publication-links"> -->
                             <!-- PDF Link. -->
-                            <!-- <span class="link-block">
-                                <a href=""
+                            <span class="link-block">
+                                <a href="https://ieeexplore.ieee.org/document/11091447"
                                    class="external-link button is-normal is-rounded is-dark">
                                     <span class="icon">
                                         <i class="fas fa-file-pdf"></i>
                                     </span>
                                     <span>Paper</span>
                                 </a>
-                            </span> -->
-                            <span class="link-block">
+                            </span>
+<!--                             <span class="link-block">
                               <a href="https://arxiv.org/abs/2410.11356"
                                  class="external-link button is-normal is-rounded is-dark">
                                 <span class="icon">
@@ -142,7 +142,7 @@
                                 </span>
                                 <span>arXiv</span>
                               </a>
-                            </span>
+                            </span> -->
                             <!-- Video Link.
                             <span class="link-block">
                               <a href="https://youtu.be/470hul75bSM" class="external-link button is-normal is-rounded is-dark">
