--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                         </div>
                         <!-- TODO: update paper and video link once upload -->
                         <div class="column has-text-centered">
-                            <div class="publication-links"> -->
+                            <div class="publication-links">
                             <!-- PDF Link. -->
                             <span class="link-block">
                                 <a href="https://ieeexplore.ieee.org/document/11091447"
